2006-02-14  Martin Baulig  <martin@ximian.com>

	* ConstructorBuilder.cs
	(ConstructorBuilder.IsGenericMethod): Override this and return
	false; the MS runtime doesn't throw an exception here.
	(ConstructorBuilder.IsGenericMethodDefinition): Likewise.

	* MethodBuilder.cs
	(MethodBuilder.IsGenericMethod): Implement this.
	(MethodBuilder.IsGenericMethodDefinition): Likewise.

2006-02-03  Zoltan Varga  <vargaz@gmail.com>

	* TypeBuilder.cs (CreateType): Add a check for Sealed parents.

2006-02-01  Zoltan Varga  <vargaz@gmail.com>

	* OpCodes.cs: Readonly is a net 2.0 only field.

Tue Jan 31 13:37:02 CET 2006 Paolo Molaro <lupus@ximian.com>

	* OpCodes.cs: Added Readonly field.

2006-01-29  Raja R Harinath  <harinath@gmail.com>

	* GenericTypeParameterBuilder.cs (DeclaringType): Return the
	declaring type of a generic method.

2005-12-15  Raja R Harinath  <rharinath@novell.com>

	* TypeBuilder.cs (IsGenericType): Implement override.

2005-12-07  Martin Baulig  <martin@ximian.com>

	* GenericTypeParameterBuilder.cs: Add support for custom attributes.
	(GenericTypeParameterBuilder.cattrs): New field.
	(GenericTypeParameterBuilder.SetCustomAttribute): Implement this.

Mon Dec 5 15:13:26 CET 2005 Paolo Molaro <lupus@ximian.com>

	* ILGenerator.cs: fixed emitting doubles on ARM.

2005-12-02  Alp Toker  <alp@atoker.com>

	* GenericTypeParameterBuilder.cs:
	* TypeBuilder.cs: DeclaringMethod should return MethodBase, not MethodInfo

2005-11-19  Zoltan Varga  <vargaz@gmail.com>

	* AssemblyBuilder.cs: Add support for setting FileVersion unmanaged 
	resource. Fixes #64427.

2005-11-18  Zoltan Varga  <vargaz@gmail.com>

	* ParameterBuilder.cs (SetCustomAttribute): Handle DefaultParameterValueAttribute as well.

	* CustomAttributeBuilder.cs: Add support for decoding more types of
	constructor parameters.

2005-11-11  Zoltan Varga  <vargaz@gmail.com>

	* TypeBuilder.cs (SetCustomAttribute): Handle ComImportAttribute as well.

2005-11-11  Marek Safar  <marek.safar@seznam.cz>
